execute_process(COMMAND mysql_config --variable=pkgincludedir OUTPUT_VARIABLE MYSQL_HEADER_PATH)
if(MYSQL_HEADER_PATH)
  add_subdirectory(./SelectAndFetchInOrderTest)
  add_subdirectory(./SelectAndFetchOneSpecifiedSourceTest)
  add_subdirectory(./SelectAndFetchSomeSpecifiedSoucesTest)
  add_subdirectory(./TruncateTest)
  add_subdirectory(./UpdateTest)
  add_subdirectory(./InsertMultipleByOnceTest)
  add_subdirectory(./InsertBySqlStatmentTest)
  add_subdirectory(./GetPrimaryKeyWithMutipleTargetsTest)
  add_subdirectory(./GetPrimaryKeyTest)
  add_subdirectory(./ExecuteTest)
  add_subdirectory(./EscapeStringTest)
  add_subdirectory(./DeleteSpecifiedTargetsTest)
  add_subdirectory(./DeleteRangeTest)
  add_subdirectory(./BatchReplaceOneDbTest)
  add_subdirectory(./BatchReplaceMultipleDbTest)
  add_subdirectory(./BatchReplaceDifferentKindValuesTest)
  add_subdirectory(./BatchReplaceAllDbsTest)
  add_subdirectory(./BatchInsertOneDbTest)
  add_subdirectory(./BatchInsertIgnoreAllDbsTest)
  add_subdirectory(./BatchInsertDifferentKindValuesTest)
  add_subdirectory(./BatchInsertAllDbsTest)
endif(MYSQL_HEADER_PATH)

if(ENV{DB2_HOME})
  add_subdirectory(./DB2Tests)
endif(ENV{DB2_HOME})